--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-mousetrap": "^2.0.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -18,6 +19,7 @@
     "@types/node": "^12.12.34",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
+    "@types/react-hook-mousetrap": "^2.0.0",
     "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^5.0.1",
     "react-scripts": "3.4.1",
